--- a/CalDepGUIFuentes/styles/TresColumnas.css
+++ b/CalDepGUIFuentes/styles/TresColumnas.css
@@ -1,15 +1,45 @@
-.tres-columnas {
+.columnas {
     display: flex;
+    flex-direction: row;
+    height: 88%;
+  }
+
+  .tres-columnas{
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    padding: 1rem;
-    height: 100%;
+    height: 75%;
+    width: 90%;
+    box-shadow: 0 0 30px rgba(52, 52, 52, 0.5);
+    border-radius: 13px;
+    overflow: hidden;
+  }
+
+  .tres-columnas-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(110deg, #6295FF, #4DDCE0);
+    height: 12%;
+    border-top-left-radius: 13px;
+    border-top-right-radius: 13px;
   }
   
   .primera-columna {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
+    padding: 1rem;
+    height: 100%;
+  }
+
+  .parametros-equipos{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    overflow-y: auto;
+    height: 60%;
   }
   
   .boton-distancias {
@@ -22,7 +52,12 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding-left: 1rem;
+    padding: 1rem;
+    height: 100%;
+  }
+  .distancias-inputs{
+    padding: 15px;
+    overflow-y: auto;
   }
 
   .distancia-item {
@@ -31,14 +66,13 @@
     gap: 1rem;
   }
   
-
   .tercera-columna {
     flex: 1;
-    background-image: url('/dep.jpg');
-    background-size: cover;
+    background-image: url('/calendar.png');;
     background-position: center;
     background-repeat: no-repeat;
-    padding-left: 1rem;
+    padding: 1rem;
+    height: 100%;
   }
 
   .boton-generar {
@@ -46,3 +80,26 @@
     margin-top: auto;
   }
   
+  @media (max-width: 640px) {
+    .tres-columnas{
+      width: 100%;
+      overflow: auto;
+      border-radius: 0;
+      box-shadow: none;
+      height: auto;
+    }
+    .primera-columna{
+      height: auto;
+    }
+    .parametros-equipos{
+      height: auto;
+      overflow-y: initial;
+    }
+    .columnas{
+      height: auto;
+      flex-direction: column;
+    }
+    .tercera-columna{
+      height: 600px;
+    }
+  }
