--- a/CalDepGUIFuentes/styles/globals.css
+++ b/CalDepGUIFuentes/styles/globals.css
@@ -25,3 +25,17 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+#__next {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.App{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
