--- a/CalDepGUIFuentes/styles/TresColumnas.css
+++ b/CalDepGUIFuentes/styles/TresColumnas.css
@@ -67,26 +67,55 @@
   }
   
   .tercera-columna {
+    display: flex;
+    flex-direction: column;
     flex: 1;
-    background-image: url('/calendar.png');;
-    background-position: center;
-    background-repeat: no-repeat;
     padding: 1rem;
     height: 100%;
+    background-image: none;
   }
-  .tercera-columna-tournament-loaded {
-    flex: 1;
+  .no-tournament-loaded {
+    background-image: url('/calendar.png');
     background-position: center;
     background-repeat: no-repeat;
-    padding: 1rem;
-    height: 100%;
   }
   .encuentros {
     display: flex;
     flex-direction: column;
-    height: 80%;
+    flex-grow: 1;
     overflow-y: auto;
     padding: 10px;
+  }
+
+  .fecha{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0.5rem;
+  }
+
+  .date{
+    padding-right: 1rem;
+    display: flex;
+    flex-direction: column;
+    opacity: 0.7;
+  }
+
+  .linea{
+    position: relative;
+    left: 50%;
+    border-left: thick solid #58b8ee;
+    height: 100%;
+    display: flex;
+    flex-grow: 1;
+  }
+
+  .partidos{
+    margin: 0.5rem;
+    padding:8px;
+    flex-grow: 1;
+    border-radius: 5px;
+    border-left: thick solid #58b8ee;
+    background-color: rgba(88, 184, 238, 0.17);
   }
 
   .boton-generar {
@@ -94,7 +123,7 @@
     margin-top: auto;
   }
   
-  @media (max-width: 640px) {
+  @media (max-width: 900px) {
     .tres-columnas{
       width: 100%;
       overflow: auto;
