--- a/CalDepGUIFuentes/styles/TresColumnas.css
+++ b/CalDepGUIFuentes/styles/TresColumnas.css
@@ -1,9 +1,3 @@
-.columnas {
-    display: flex;
-    flex-direction: row;
-    height: 88%;
-  }
-
   .tres-columnas{
     display: flex;
     flex-direction: column;
@@ -24,6 +18,12 @@
     border-top-left-radius: 13px;
     border-top-right-radius: 13px;
   }
+
+  .columnas {
+    display: flex;
+    flex-direction: row;
+    height: 88%;
+  }
   
   .primera-columna {
     flex: 1;
@@ -31,7 +31,7 @@
     flex-direction: column;
     gap: 0.5rem;
     padding: 1rem;
-    height: 100%;
+    height: 95%;
   }
 
   .parametros-equipos{
@@ -53,7 +53,7 @@
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
-    height: 100%;
+    height: 95%;
   }
   .distancias-inputs{
     padding: 15px;
@@ -65,13 +65,18 @@
     align-items: center;
     gap: 1rem;
   }
+
+  .boton-generar {
+    align-self: flex-end;
+    margin-top: 10px;
+  }
   
   .tercera-columna {
     display: flex;
     flex-direction: column;
     flex: 1;
     padding: 1rem;
-    height: 100%;
+    height: 95%;
     background-image: none;
   }
   .no-tournament-loaded {
@@ -117,19 +122,24 @@
     border-left: thick solid #58b8ee;
     background-color: rgba(88, 184, 238, 0.17);
   }
-
-  .boton-generar {
-    align-self: flex-end;
-    margin-top: auto;
-  }
   
   @media (max-width: 900px) {
+    body{
+      width: 100%;
+      margin: 0;
+    }
     .tres-columnas{
       width: 100%;
       overflow: auto;
       border-radius: 0;
       box-shadow: none;
       height: auto;
+    }
+    .tres-columnas-header{
+      height: auto;
+      border-radius: 0;
+      padding-top: 1rem;
+      padding-bottom: 0.5rem;
     }
     .primera-columna{
       height: auto;
