--- a/CalDepGUIFuentes/styles/TresColumnas.css
+++ b/CalDepGUIFuentes/styles/TresColumnas.css
@@ -84,6 +84,13 @@
     background-position: center;
     background-repeat: no-repeat;
   }
+  .loader-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .encuentros {
     display: flex;
     flex-direction: column;
