--- a/CalDepGUIFuentes/styles/globals.css
+++ b/CalDepGUIFuentes/styles/globals.css
@@ -16,6 +16,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background-image: url('../public/background-clear.svg');
 }
 
 #__next {
